@@ -1,36 +1,35 @@
 package com.games.enterprisechallenge.model;
 
 
-import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
+import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import org.springframework.boot.autoconfigure.task.TaskExecutionProperties;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-
-@Entity
 @Getter
 @Setter
 @AllArgsConstructor
 @NoArgsConstructor
 public class Usuario implements UserDetails {
-
-    @Id
-    @GeneratedValue(strategy= GenerationType.IDENTITY)
-    private Long id;
-    private String nomeUsuario;
+    private String email;
     private String senha;
+    private Role role;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
+        List<SimpleGrantedAuthority> authoritiesList = new ArrayList<>();
+        String[] authorities = this.role.getAuthorities().split(",");
+        Arrays.asList(authorities).forEach(a -> authoritiesList.add(new SimpleGrantedAuthority(a)));
+        return authoritiesList;
     }
 
     @Override
@@ -40,7 +39,7 @@ public class Usuario implements UserDetails {
 
     @Override
     public String getUsername() {
-        return this.nomeUsuario;
+        return this.email;
     }
 
     @Override
